# tags

./: .clang-format  .cmake-format  .gitignore  CMakeLists.txt  LICENSE  README.md  common.cmake  everload_tags-config.cmake.in  sc
.github/workflows/: ci.yml  ci_pybindings.yml
cmake/: everload_tags.cmake  tags-config.cmake.in
cmake/everload_tags/development/: GNU.cmake
cmake/tags/: development.cmake
cmake/tags/development/: GNU.cmake
include/everload_tags/: config.hpp  tags.hpp  tags_edit.hpp  tags_line_edit.hpp
include/tags/: TagsEdit.h  tags.hpp  tags_area.hpp  tags_edit.hpp  tags_line_edit.hpp
py/: MANIFEST.in  bindings.cmake  bindings.h  bindings.xml  demo.py  setup.py
py/EverloadTags/: __init__.py  __init__.pyi
src/: TagsEdit.cpp  TagsLineEdit.cpp  common.hpp  scope_exit.h  tags.cpp  tags_area.cpp  tags_edit.cpp  tags_impl.hpp  tags_line_edit.cpp  util.hpp
src/everload_tags/: common.hpp  config.cpp  tags_edit.cpp  tags_line_edit.cpp  util.hpp
test/: form.cpp  form.h  form.ui  main.cpp  util.cpp
test/app/: form.cpp  form.h  form.ui
utils/: pyside_config.py
